<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_contributor_name"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="John Doe"/>

                <TextView
                    android:id="@+id/tv_bio"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    tools:text="Bio"/>

                <TextView
                    android:id="@+id/tv_company"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Company name"/>

                <TextView
                    android:id="@+id/tv_email"
                    style="@android:style/TextAppearance.Small"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="E-mail"/>

                <LinearLayout
                    android:id="@+id/ll_publicRepos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/public_repos"/>

                    <TextView
                        android:id="@+id/tv_public_repos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="none"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_followers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/followers"/>

                    <TextView
                        android:id="@+id/tv_followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="none"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_following"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/following"/>

                    <TextView
                        android:id="@+id/tv_following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="none"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_creation_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/creation_date_label"/>

                    <TextView
                        android:id="@+id/tv_creation_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="January 2, 2016"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_updated_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/updated_date_label"/>

                    <TextView
                        android:id="@+id/tv_updated_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="March 5, 2017"/>
                </LinearLayout>
            </LinearLayout>
        <ProgressBar
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
